# demo-tg-bot

./: .pre-commit-config.yaml  README.md  app.py  config.py  function.py  main.py  pyproject.toml  requirements.txt  set-webhook.py  webhook.py  yc_function_request_handler.py
keyboards/: common_keyboards.py
keyboards/inline_keyboards/: actions_kb.py  info_kb.py  shop_kb.py
middlewares/: album_middleware.py  rate_limit_middleware.py
routers/: __init__.py  admin_handlers.py  common.py  media_handlers.py
routers/callback_handlers/: __init__.py  actions_kb_callback_handlers.py  info_kb_callback_handlers.py  shop_kb_callback_handlers.py
routers/commands/: __init__.py  base_commands.py  user_commands.py
routers/survey/: __init__.py  handlers.py  states.py
routers/survey/survey_handlers/: email_newsletter_handlers.py  full_name.py  select_sport_handlers.py  user_email_handlers.py
utils/: async_timed_queue.py
validators/: email_validators.py
