[project]
name = ""
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0,<4",
    "email-validator>=2.2.0,<3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.9.1,<3",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
